--- a/GOTchaApp/package.json
+++ b/GOTchaApp/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "expo": "~40.0.0",
+    "expo-barcode-scanner": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
