--- a/.env-template
+++ b/.env-template
@@ -4,7 +4,7 @@ DEFAULT_PASSWORD=
 ENVIRONMENT=
 JWT_SECRET=
 POSTGRES_DB=
-POSTGRES_USER=
+POSTGRES_USER=dbUser
 POSTGRES_PASSWORD=
 REACT_APP_SERVER_HOST=
 REACT_APP_SERVER_PORT=
